# tech-challenge-5

./: .env.example  .env.railway.example  .gitignore  .railwayignore  DEBUGGING_UPLOAD_FORM_PARSING.md  LICENSE  Makefile  RAILWAY_SINGLE_PROJECT_SETUP.md  README.md  TESTING_GUIDE.md  docker-compose.yml  gw_response.json  processor_logs.txt  pyproject.toml  railway.toml  response.json  status_latest.json  status_out.json  tech-challenge-5.docx
.claude/skills/ai-pipeline-docs/: SKILL.md
.claude/skills/anthropic-diagram-analysis/: SKILL.md
.claude/skills/celery-worker-patterns/: SKILL.md
.claude/skills/ci-cd-pipeline/: SKILL.md
.claude/skills/clean-architecture-python/: SKILL.md
.claude/skills/docker-compose-stack/: SKILL.md
.claude/skills/hackathon-context/: SKILL.md
.claude/skills/microservices-layout/: SKILL.md
.claude/skills/pytest-conventions/: SKILL.md
.claude/skills/readme-template/: SKILL.md
.claude/skills/security-checklist/: SKILL.md
.claude/skills/sqlalchemy-patterns/: SKILL.md
.claude/skills/structured-logging/: SKILL.md
.github/workflows/: ci.yml
docker/postgres/: init.sql
docs/: 1. infrastructure.md  2. upload-service.md  hackathon-requisitos.md  roadmap-implementacao.md
services/api/: Dockerfile  pyproject.toml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  main.py
services/gateway/tests/: test_cors.py  test_multipart_forwarding.py
services/minio/: Dockerfile
services/processor/: Dockerfile  pyproject.toml
services/processor/app/: celery_app.py  config.py  main.py  models.py  storage.py
services/reports/: Dockerfile  pyproject.toml
services/reports/app/: config.py  main.py  models.py  pdf_generator.py
services/upload/: Dockerfile  pyproject.toml
services/upload/app/: celery_app.py  config.py  main.py  models.py  routes.py  storage.py
services/upload/tests/: conftest.py  test_routes.py  test_upload_fixtures.py
services/worker/: Dockerfile  pyproject.toml
shared/: pyproject.toml
shared/src/shared/: celery.py  config.py  database.py  logging.py  models.py  schemas.py  storage.py
