[project]
name = "shared"
version = "0.1.0"
description = "Shared schemas and config for all services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "minio>=7.2.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
