[project]
name = "reports"
version = "0.1.0"
description = "Reports — persist and serve analysis reports"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "celery[redis]>=5.4.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "shared",
]

[tool.uv]
package = true

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
