[project]
name = "worker"
version = "0.1.0"
description = "Worker - AI Processing Service"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "anthropic>=0.40.0",
    "pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
